# arm-asm-simulator

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: ci.yml
src/: i18n.h  main.cpp
test/: adc.s  add_sub.s  b_eq_ne.s  b_uncond.s  bl_return.s  bubble_sort.s  bx_lr.s  cmn.s  cmp.s  cond_cs_cc.s  cond_eq_ne.s  cond_ge_le.s  cond_gt_lt.s  cond_hi_ls.s  cond_mi_pl.s  cond_self_loop.s  cond_vs_vc.s  flags_comprehensive.s  immediate.s  ldm_stm_db.s  ldm_stm_fd.s  ldm_stm_ia.s  ldr_const.s  ldr_label.s  ldr_str.s  ldr_str_offset.s  ldr_str_postindexed.s  ldr_str_preindexed.s  ldr_str_reg_offset.s  ldrb_test.s  logical.s  loop_counter.s  masking.s  mov_mvn.s  mul_mla.s  nested_calls.s  overflow_carry.s  push_lr_pop_pc.s  push_pop_multiple.s  push_pop_single.s  (+14 more)
